// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> render the button 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#313d48",
        "borderRadius": 6,
        "minHeight": 60,
        "paddingHorizontal": 24,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontSize": 18,
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      Button
    </Text>
  </View>
</View>
`;

exports[`<Button/> render the button with an icon 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#313d48",
        "borderRadius": 6,
        "minHeight": 60,
        "paddingHorizontal": 24,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "marginLeft": -10,
          "marginRight": 10,
        }
      }
    >
      <View>
        <Text>
          Icon
        </Text>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontSize": 18,
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      Button
    </Text>
  </View>
</View>
`;

exports[`<Button/> render the button with style 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#313d48",
        "borderRadius": 6,
        "minHeight": 60,
        "paddingHorizontal": 24,
      },
      Object {
        "backgroundColor": "black",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontSize": 18,
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "black",
          },
        ]
      }
    >
      Button
    </Text>
  </View>
</View>
`;
